Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumberIntegerField.quorum
class Main
    number v = Test()
    action Main
        if v = 5.0
            output "passed"
        end
    end

    action Test() returns number
        integer var = 5
        return var
    end
end