Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignObjectIntegerField.quorum
class Main
    Object v = Test()
    action Main
    end

    action Test() returns Object
        integer var = 5
        return var
    end
end